--- a/Day12/Responsive Web Design Projects/file3.html
+++ b/Day12/Responsive Web Design Projects/file3.html
@@ -12,7 +12,7 @@
         }
 
         #header {
-            background-color: snow;
+            background-color: inherit;
             position: fixed;
             width: 100%;
             top: 0px;
@@ -24,11 +24,11 @@
             margin-top: 10px;
             margin-left: 10px;
             padding: 5px;
-            background-color: linen;
+            background-color: inherit;
         }
 
         #nav-bar {
-            background-color: lightcyan;
+            background-color: inherit;
             font-size: 25px;
             float: right;
             margin-top: 15px;
@@ -42,7 +42,7 @@
             margin-right: 10px;
             display: inherit;
             text-decoration: none;
-            background-color: lightgrey;
+            background-color: inherit;
             padding: 10px;
             float: left;
             margin-right: 20px;
@@ -53,6 +53,7 @@
             max-width: 800px;
             margin: 100px auto 10px auto;
             width: 80%;
+            position: relative;
         }
 
 
