Day16: finished Personal Portfolio Webpage< Project and fixed few bugs in other projects.

--- a/Day10/Responsive Web Design Projects /file1.html
+++ b/Day10/Responsive Web Design Projects /file1.html
@@ -20,6 +20,7 @@
             display: block;
             margin: auto;
             padding: 5px;
+            width: 60%;
         }
     </style>
 </head>
@@ -106,7 +107,6 @@
         <a id="tribute-link" href="https://www.google.com" target="_blank">Google </a>
 
     </main>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 
