--- a/Day11/Responsive Web Design Projects/file2.html
+++ b/Day11/Responsive Web Design Projects/file2.html
@@ -5,8 +5,10 @@
     <title>Survey Form</title>
     <style>
         body {
-            height: 650px;
+            height: 100%;
             font-size: 1.2em;
+            line-height: 1.5em;
+            background-color: rgb(211, 205, 211);
         }
 
         main {
@@ -15,12 +17,13 @@
             width: 60%;
             height:100%;
             justify-content: center;
-            background-color: lightgray;
+            background-color: rgb(211, 211, 215);
             flex-direction: row;
         }
 
         header {
             text-align: center;
+            margin: 50px auto;
         }
 
 
@@ -55,7 +58,12 @@
 
         #submit_button {
             text-align: center;
-            margin: auto 30px;
+            margin-bottom: 30px;
+        }
+        #submit {
+            font-size: 20px;
+            display: inline-block;
+            
         }
     </style>
 
@@ -173,7 +181,6 @@
 
         </div>
     </main>
-    <script src=" https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
