--- a/Day12/Responsive Web Design Projects/file3.html
+++ b/Day12/Responsive Web Design Projects/file3.html
@@ -138,7 +138,7 @@
         <section id="subscribe">
             <form id="form" action="https://www.freecodecamp.com/email-submit">
                 <div id="form-content">
-                    <h3>Some info about the form. </h3>
+                    <h3>Enter email to subscribe </h3>
                     <input type="email" name="email" id="email" placeholder="Enter your email address" />
                     <br>
                     <input type="submit" id="submit" value="Get Started" />
