--- a/Day15-16/Responsive Web Design Projects/file5.html
+++ b/Day15-16/Responsive Web Design Projects/file5.html
@@ -127,7 +127,6 @@
             justify-content: space-evenly;
         }
 
-
         .contact-link {
             font-size: 1.5em;
             margin: auto 20px;
@@ -139,6 +138,9 @@
             border-radius: 30%;
             background-color: rgb(212, 201, 201);             
             */
+        }
+        .contact-link a {
+            text-decoration: none;
         }
 
         #footer {
